--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -1,1 +1,68 @@
 /* You can add global styles to this file, and also import other style files */
+
+// Colors
+:root {
+  --text: #333;
+  --primary: #f3c614;
+  --secondary: #353535;
+  --light: #f4f4f4;
+  --page: #fff;
+}
+
+// Fonts
+@font-face {
+  font-family: "Open Sans";
+  src: url(https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap);
+}
+
+@font-face {
+  font-family: "Roboto";
+  src: url(https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap);
+}
+
+p {
+  font-family: "Open Sans", sans-serif;
+  font-size: 1.6rem;
+  line-height: 1.6;
+  color: var(--text);
+  margin: 0;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin: 0;
+  font-family: "Roboto", sans-serif;
+  font-weight: 700;
+  color: var(--text);
+}
+
+h1 {
+  font-size: 3.6rem;
+  line-height: 1.2;
+}
+
+h2 {
+  font-size: 3rem;
+  line-height: 1.3;
+  font-weight: 500;
+}
+
+h3 {
+  font-size: 2.4rem;
+  line-height: 1.4;
+}
+
+body {
+  font-family: "Open Sans", sans-serif;
+  font-size: 1.6rem;
+  line-height: 1.6;
+  color: var(--text);
+  margin: 0;
+  padding: 0;
+  background-color: var(--page);
+  box-sizing: border-box;
+}
