--- a/client/src/app/pages/home/home.component.html
+++ b/client/src/app/pages/home/home.component.html
@@ -1,6 +1,27 @@
 <p>Home Works!</p>
 
-<p>
-  {{ recipeList() | json }}
-</p>
-{{ recipeList() | json }}
+<div>
+  <div class="title"></div>
+  <h3>Recipes</h3>
+  <div class="recipes">
+    <div class="recipe-card" *ngFor="let recipe of recipeList()">
+      <div class="recipe-card__image">
+        <img
+          [src]="recipe.picture"
+          alt="Beef and Mustard Pie"
+          onerror="this.style.display='none'"
+        />
+      </div>
+      <div class="recipe-card__content">
+        <h4>{{ recipe.name }}</h4>
+        <p>
+          {{ recipe.description.substring(0, 100) }}
+          {{ recipe.description.length > 100 ? "..." : "" }}
+        </p>
+      </div>
+    </div>
+    <div *ngIf="recipeList()?.length == 0">
+      <h3>No recipes were found :(</h3>
+    </div>
+  </div>
+</div>
