--- a/client/src/app/pages/home/home.component.html
+++ b/client/src/app/pages/home/home.component.html
@@ -1,8 +1,7 @@
-<p>Home Works!</p>
-
-<div>
-  <div class="title"></div>
-  <h3>Recipes</h3>
+<div class="home">
+  <div class="title">
+    <h3>Recipes</h3>
+  </div>
   <div class="recipes">
     <div class="recipe-card" *ngFor="let recipe of recipeList()">
       <div class="recipe-card__image">
@@ -12,13 +11,10 @@
           onerror="this.style.display='none'"
         />
       </div>
-      <div class="recipe-card__content">
+      <div class="recipe-card__title">
         <h4>{{ recipe.name }}</h4>
-        <p>
-          {{ recipe.description.substring(0, 100) }}
-          {{ recipe.description.length > 100 ? "..." : "" }}
-        </p>
       </div>
+      <div class="recipe-card__footer">Recipe stats</div>
     </div>
     <div *ngIf="recipeList()?.length == 0">
       <h3>No recipes were found :(</h3>
