--- a/client/src/app/pages/home/home.component.scss
+++ b/client/src/app/pages/home/home.component.scss
@@ -1,44 +1,61 @@
-.recipes {
+.home {
   display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  margin: 0 auto;
-  max-width: 1200px;
-  padding: 0 15px;
-  width: 100%;
-  gap: 15px;
+  flex-direction: column;
+  align-items: center;
 
-  .recipe-card {
-    background-color: var(--page);
-    border-radius: 20px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    margin: 15px 0;
-    overflow: hidden;
-    width: 250px;
-    height: 290px;
+  .recipes {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    max-width: 1200px;
+    padding: 0 15px;
+    width: 100%;
+    gap: 15px;
 
-    &__image {
-      width: 100%;
-      height: 140px;
+    .recipe-card {
+      background-color: var(--page);
+      border-radius: 20px;
+      box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+      margin: 15px 0;
       overflow: hidden;
+      width: 250px;
+      height: 290px;
+      cursor: pointer;
 
-      background: #717171;
+      &__image {
+        width: 100%;
+        height: 140px;
+        overflow: hidden;
 
-      img {
-        object-fit: cover;
-        padding: 12px;
+        background: #717171;
+
+        img {
+          object-fit: cover;
+          // padding: 12px;
+        }
       }
-    }
 
-    &__content {
-      padding: 15px;
-      padding-top: 5px;
-
-      h4 {
-        font-size: 1.3rem;
-        margin-bottom: 10px;
+      &__title {
+        text-align: center;
+        margin-top: 8px;
+        h4 {
+          font-size: 1.3rem;
+          margin-bottom: 10px;
+        }
       }
-      p {
+
+      &__footer {
+        margin-top: 4px;
+        display: flex;
+        justify-content: center;
+      }
+
+      // Hover effect
+      &:hover {
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+        transform: translateY(-5px) scale(1.02);
+        transition: 0.1s ease-in-out;
+        transition-property: box-shadow, transform;
       }
     }
   }
