--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -55,10 +55,18 @@ h3 {
 }
 
 body {
+  min-height: 100%;
+  width: 100%;
+  max-width: 100%;
+
   font-family: "Open Sans", sans-serif;
-  color: var(--text);
   margin: 0;
   padding: 0;
+  color: var(--text);
   background-color: var(--page);
-  box-sizing: border-box;
+  overflow: auto;
+  overflow-x: hidden;
+  * {
+    box-sizing: border-box;
+  }
 }
