Basic recipe view

--- a/client/src/app/pages/home/home.component.html
+++ b/client/src/app/pages/home/home.component.html
@@ -18,7 +18,7 @@
         <div class="recipe-card__footer"></div>
       </div>
       <div *ngIf="recipeList()?.length == 0">
-        <h3>No recipes were found :(</h3>
+        <h3>No recipes were found</h3>
       </div>
     </a>
   </div>
