Page styles and recipe source

--- a/client/src/app/app.component.scss
+++ b/client/src/app/app.component.scss
@@ -1,6 +1,14 @@
 .container {
   box-sizing: border-box;
-  height: 100%;
+  height: 100vh;
   width: 100%;
-  margin: 16px;
+  padding: 16px;
+  overflow: hidden;
+
+  background: linear-gradient(
+      to bottom,
+      var(--background-primary),
+      var(--background-secondary)
+    )
+    no-repeat;
 }
