Page fonts and button components

--- a/client/src/app/pages/view-recipe/view-recipe.component.html
+++ b/client/src/app/pages/view-recipe/view-recipe.component.html
@@ -1,5 +1,5 @@
 <div class="recipe-view-container">
-  <a [routerLink]="'/'">Back</a>
+  <app-button link="/">Back</app-button>
 
   <div class="recipe-view">
     <div class="recipe">
