--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -3,8 +3,9 @@
 // Colors
 :root {
   --text: #333;
+  --text-light: #f4f4f4;
   --text-secondary: #666;
-  --primary: #f3c614;
+  --primary: #a91ff3;
   --secondary: #353535;
   --light: #f4f4f4;
   --page: #fff;
@@ -14,13 +15,13 @@
 
 // Fonts
 @font-face {
-  font-family: "Open Sans";
-  src: url(https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap);
+  font-family: "Open Sans", sans-serif;
+  src: url("/assets/fonts/OpenSans.ttf");
 }
 
 @font-face {
-  font-family: "Roboto";
-  src: url(https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap);
+  font-family: "Fredoka";
+  src: url("/assets/fonts/Fredoka.ttf");
 }
 
 p {
@@ -36,7 +37,7 @@ h4,
 h5,
 h6 {
   margin: 0;
-  font-family: "Roboto", sans-serif;
+  font-family: "Fredoka", sans-serif;
   font-weight: 700;
   color: var(--text);
 }
