--- a/client/src/app/pages/home/home.component.scss
+++ b/client/src/app/pages/home/home.component.scss
@@ -21,6 +21,9 @@
       width: 250px;
       height: 290px;
       cursor: pointer;
+      display: flex;
+      flex-direction: column;
+      padding-bottom: 12px;
 
       &__image {
         width: 100%;
@@ -48,6 +51,8 @@
         margin-top: 4px;
         display: flex;
         justify-content: center;
+        gap: 8px;
+        flex-wrap: wrap;
       }
 
       // Hover effect
