--- a/client/src/app/components/generic/tag/tag.component.html
+++ b/client/src/app/components/generic/tag/tag.component.html
@@ -1,4 +1,11 @@
-<div class="recipe-tag-box" [ngStyle]="{ 'background-color': tag.color }">
+<div
+  class="recipe-tag-box"
+  [ngStyle]="{ 'background-color': tag.color }"
+  [ngClass]="{
+    'recipe-tag-box__small': size === 'small',
+    'recipe-tag-box__large': size === 'large'
+  }"
+>
   <div class="recipe-tag-box__icon"></div>
   <p class="recipe-tag-box__name">
     {{ tag.name }}
