--- a/client/src/app/pages/view-recipe/view-recipe.component.scss
+++ b/client/src/app/pages/view-recipe/view-recipe.component.scss
@@ -31,6 +31,13 @@
         }
       }
 
+      .tags {
+        display: flex;
+        justify-content: center;
+        margin: 10px 0;
+        gap: 10px;
+      }
+
       .description {
         margin: 10px 0;
         text-align: center;
